Added 'Tracking events' to my configuration for Business Event Analyzer functionality

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -25,11 +25,12 @@ log4j.logger.org.apache=WARN
 log4j.logger.org.springframework.beans.factory=WARN
 
 # Mule classes
-log4j.logger.org.mule=INFO
+log4j.logger.org.mule=DEBUG
 log4j.logger.org.transport.http=INFO
-log4j.logger.com.mulesoft=INFO
+log4j.logger.com.mulesoft=DEBUG
+log4j.logger.com.mulesoft.mule.tracking=DEBUG
 
 
 # Your custom classes
-log4j.logger.com.mulesoft.demo.orderprocessing=INFO
+log4j.logger.com.mulesoft.demo.orderprocessing=DEBUG
 
