--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <description>Simple Mule application to illustrate the use of exception handling strategys</description>
 
     <properties>
-        <mule.version>3.2.0-SNAPSHOT</mule.version>
+        <mule.version>3.2.0-M2-SNAPSHOT</mule.version>
         <!-- Tools properties -->
         <eclipsePluginVersion>2.5</eclipsePluginVersion>
         <vmtype>org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType</vmtype>
@@ -127,7 +127,7 @@
                         </goals>
                         <configuration>
                             <tasks>
-                                <copy file="${project.build.directory}/${build.finalName}.zip"
+                                <copy file="${project.build.directory}/${project.build.finalName}.zip"
                                       todir="${env.MULE_HOME}/apps" overwrite="true"/>
                             </tasks>
                         </configuration>
@@ -255,6 +255,12 @@
         <dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>mule-module-ognl</artifactId>
+            <version>${mule.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.mulesoft.muleesb.modules</groupId>
+            <artifactId>mule-module-tracking-ee</artifactId>
             <version>${mule.version}</version>
             <scope>provided</scope>
         </dependency>
